Config/open api (#20)
* Adds the  Open API documentation dependency to pom.xml and configures endpoints

* Renames API title in the springdoc configuration, and also renames ItemController to reflect the change

* Starts documenting DTOs with Open API annotations

* Refactors AuthenticationService to correctly authenticate user

* Refactors Authentication Service tests to reflect changes in the authentication code